--- a/style.css
+++ b/style.css
@@ -3,36 +3,45 @@ body{
     margin:0;
 }
 
-/* container */
+.TitleBackground{
+    background-color: rgb(68, 68, 20);
+    color: white;
+    padding-left: 20px;
+    
+}
+.inlineWithBaliseP{
+    margin-top:5px;
+    margin-bottom:5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* CONTAINER */
 .BodyContainer{
     background-color: rgb(237, 237, 237);
     width: 900px;
     margin-left:auto;
     margin-right:auto;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-/* Group Title :  */
+/*  GROUP TITLE */
 .GroupTitle{
     background-color: rgb(68, 68, 20);
-    
     display: flex;
     justify-content: space-between;
 }
-
 .TitleH1{
     margin-top: 5px;
     padding-left: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-    
 }
-
 .GroupLinkTitle{
     color: white;
     margin-top: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 .LinkA{
     color: rgb(68, 68, 20);
     background-color: white;
@@ -41,32 +50,21 @@ body{
     text-decoration: none;
     font-weight: bold;
 }
-
 .divImg{
-
     border-left: solid 2px rgb(68, 68, 20);
     border-right: solid 2px rgb(68, 68, 20);
     border-bottom: solid 10px rgb(68, 68, 20);
 }
 
-
-/** Group Carts Meats **/
+/** GROUP CARTS MEATS **/
 .GroupCartsMeats{
     display: flex;
     justify-content:space-between;
 }
-
 .BlockWriteList{
-    
    padding:20px;
 }
 
-.DivCartsMeatsTitle{
-    background-color: rgb(68, 68, 20);
-    color: white;
-    padding-left: 20px;
-    
-}
 
 /* Write Carts Meats */
 .b-red{
@@ -80,7 +78,7 @@ body{
     display:flex;
     flex-direction: column-reverse;
     
-    padding:10px;
+    padding:20px;
 }
 
 .li-cartsMeats{
@@ -94,26 +92,54 @@ ul .li-cartsMeats{
    
 }
 
+/** GROUP MOFONGOS ET SHAKES & JUICE */
+.groupM-Shakes{
+    display: flex;
+    justify-content:space-between;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left:20px;
+    padding-right:20px;
+    
+}
+
+.mofongos{
+    background-color: rgb(155, 155, 71);
+    padding: 20px;
+    width: 500px;
+}
+
+.mofongos p{
+   display: flex;
+   justify-content: space-between;
+}
+
+.ShakesJuice{
+    background-color: rgb(155, 155, 71);
+    padding: 20px;
+}
+
+.ShakesJuice p{
+    display: flex;
+    justify-content: space-between;
+ }
 
 /* GROUP BREAKFAST */
 .groupBreakfast{
-    padding:20px;
+    
    
 }
 
 .BreakfastSandwiches{
     display: flex;
     justify-content: space-between;
+    padding-left: 20px;
 
 }
 
 .DeuxM{
     display: flex;
     justify-content:space-around;
-}
-
-.BlockDesayun{
-   
 }
 
 .BlockSandwiches{
