--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
     padding-left: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
+
 }
 .GroupLinkTitle{
     color: white;
@@ -119,7 +120,7 @@ ul .li-cartsMeats{
 }
 .ShakesJuice{
     background-color: rgb(155, 155, 71);
-    padding: 20px;
+    padding: 10px;
     border-left: solid 1px rgb(68, 68, 20);
     border-right: solid 2px rgb(68, 68, 20);
     border-top: solid 2px rgb(68, 68, 20);
@@ -128,8 +129,10 @@ ul .li-cartsMeats{
 }
 .ShakesJuice p{
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
+    font-size: 13px;
  }
+
 
 /* GROUP BREAKFAST */
 .BreakfastSandwiches{
@@ -143,6 +146,6 @@ ul .li-cartsMeats{
 }
 .BlockSandwiches{
     padding: 20px;
-    width: 300px;
+    width: 500px;
     margin-top:0;
 }
