--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background-color: rgb(68, 68, 20);
     color: white;
     padding-left: 20px;
+    text-align: center;
     
 }
 .inlineWithBaliseP{
@@ -59,11 +60,16 @@ body{
 
 /** GROUP CARTS MEATS **/
 .GroupCartsMeats{
-    display: flex;
-    justify-content:space-between;
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    padding: 20px;
+    gap: 20px;
+    margin-bottom: 50px;
+    
+    
 }
 .BlockWriteList{
-   padding:20px;
+ 
 }
 
 
@@ -79,7 +85,7 @@ body{
     display:flex;
     flex-direction: column-reverse;
     
-    padding:20px;
+   
 }
 
 .li-cartsMeats{
@@ -95,18 +101,17 @@ ul .li-cartsMeats{
 
 /** GROUP MOFONGOS ET SHAKES & JUICE */
 .groupM-Shakes{
-    display: flex;
-    justify-content:space-between;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left:20px;
-    padding-right:20px;
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    gap: 20px;
+    padding:20px;
+    margin-bottom: 50px;
     
 }
 .mofongos{
     background-color: rgb(155, 155, 71);
     padding: 20px;
-    width: 540px;
+   
     border-left: solid 2px rgb(68, 68, 20);
     border-right: solid 1px rgb(68, 68, 20);
     border-top: solid 2px rgb(68, 68, 20);
@@ -121,6 +126,7 @@ ul .li-cartsMeats{
 .ShakesJuice{
     background-color: rgb(155, 155, 71);
     padding: 10px;
+    width: 230px;
     border-left: solid 1px rgb(68, 68, 20);
     border-right: solid 2px rgb(68, 68, 20);
     border-top: solid 2px rgb(68, 68, 20);
@@ -148,4 +154,55 @@ ul .li-cartsMeats{
     padding: 20px;
     width: 500px;
     margin-top:0;
+}
+
+@media screen and (max-width: 600px) 
+{
+    .BodyContainer{
+        background-color: rgb(237, 237, 237);
+        width: 100%;
+        margin-left:0;
+        margin-right:0;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .GroupCartsMeats , .groupM-Shakes
+    {
+        display: grid;
+        grid-template-columns: 5fr;
+        padding: 20px;
+        gap: 20px;
+        margin-bottom: 50px;
+ 
+    }
+    .GroupImageCartsMeats
+    {
+        display:flex;
+        flex-direction:row;
+        justify-content: space-between;
+        
+       
+    }
+
+    .ShakesJuice{
+        padding: 10px;
+        width: auto;
+        border-left: solid 1px rgb(68, 68, 20);
+        border-right: solid 2px rgb(68, 68, 20);
+        border-top: solid 2px rgb(68, 68, 20);
+        border-bottom: solid 2px rgb(68, 68, 20);
+    
+    }
+    /** FOOTER **/
+    .footer{ 
+        background-color:none;
+        padding: 0;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .footerContainer{
+       width: auto;
+       display: grid;
+       grid-template-columns: 2fr 5fr;
+       
+    }
+
 }
